--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>驾驶员培训系统 V6.0 - 新功能上线！</title>
+    <title>驾驶员培训系统  新功能上线！</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <style>
         /* 1. 全局样式 */
@@ -174,7 +174,7 @@
                         <ul>
                             <li><b>防止重复培训：</b>当您有正在进行的培训时，系统将不允许您为新的培训签到。</li>
                             <li><b>保障教学安全：</b>根据相关规定，实车教学签到增加了年龄校验（需小于60周岁）。</li>
-                            <li><b>确保教学质量：</b>未经后台审核通过的教练将无法进行课堂教学签到。</li>
+                            <li><b>确保教学质量：</b>未经监管平台审核通过的教练将无法进行课堂教学签到。</li>
                         </ul>
                     </div>
                 </div>
