--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                         <h3>新增“强制签退”功能</h3>
                     </div>
                      <div class="card-body">
-                       <p>遇到忘记签退或设备异常？现在您可以通过小程序“强制签退”功能，轻松结束正在进行的模拟、课堂或远程培训（实车培训除外），操作更灵活。</p>
+                       <p>遇到忘记签退或设备异常？现在您可以通过小程序“强制签退”功能，轻松结束正在进行的模拟、课堂或远程培训（实车培训除外），备注：强制签退的培训学时将做无效处理</p>
                     </div>
                 </div>
 
