--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
     <div class="container">
         <header class="header">
-            <h1>驾驶员培训系统 V6.0</h1>
+            <h1>驾驶员培训系统</h1>
             <p class="subtitle">新功能上线，让教学和学习更智能、更便捷！</p>
             <div class="release-date">发布于 2025年6月27日</div>
         </header>
