--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         <header class="header">
             <h1>驾驶员培训系统</h1>
             <p class="subtitle">新功能上线，让教学和学习更智能、更便捷！</p>
-            <div class="release-date">发布于 2025年6月27日</div>
+            <div class="release-date">发布于 2025年x月xx日</div>
         </header>
 
         <main>
